# rdb2

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  postgres.rs  state.rs  storage.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-shell.tsx  sql-editor.tsx
src/lib/: tauri.ts  types.ts
